--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "react-swipeable-views-utils": "^0.14.0",
     "react-typical": "^0.1.3",
     "simple-parallax-js": "^5.6.2"
+  },
+  "engines": {
+    "node": ">= 16.13.1"
   }
 }
