--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@camwiegert/typical": "^0.1.1",
+    "@emotion/cache": "^11.7.1",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@fullpage/react-fullpage": "^0.1.19",
